--- a/index.html
+++ b/index.html
@@ -1,62 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>智敏老弟</title>
-<link rel="shortcut icon" href="/favicon.ico"></head>
-
-<body>
-  <!-- nav bar -->
-  <div class="nav">
-    <video class="bg-video" autoplay loop muted>
-      <source src="https://storage.googleapis.com/video.wixstatic.com/video/11062b_b75407a670324c39babd882c6c01d983/1080p/mp4/file.mp4">
-    </video>
-    <nav >
-      <a href="/blog">博客.</a>
-      <a href="/life">生活.</a>
-      <a href="/me">我.</a>
-    </nav>
-  </div>
-  <div class="container">
-    <!-- magic hat -->
-    <nav class="nav-hat">
-      <img src="/favicon.ico" />
-      <div>一起摇摆🎵🎵</div>
-    </nav>
-    <!-- blog -->
-    <div class="blog-container">
-      <h1 id="blog">博客.</h1>
-      <div class="blog-content">
-        <div class="blog-hole"></div>
-        <div class="blog-title">博客列表</div>
-        <div class="blog-list">
-          载入中...
-        </div>
-        <div class="blog-article markdown-body">
-        </div>
-      </div>
-    </div>
-    <!-- life -->
-    <div class="life-container">
-      <h1 id="life">生活.</h1>
-      <div class="life-content">
-        <div class="life-content-image">
-          <img src= "https://static.wixstatic.com/media/ca2a5a_3460311e66b6416ba3e8d19dc6f4e624.jpg/v1/fill/w_1920,h_672,al_c,q_85,usm_0.66_1.00_0.01/ca2a5a_3460311e66b6416ba3e8d19dc6f4e624.jpg">
-          <span>我不是你想象中的智敏老弟.</span>
-        </div>
-        <div class="life-content-video">
-          <iframe src="//player.bilibili.com/player.html?aid=717741&cid=1052159&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
-        </div>
-      </div>
-    </div>
-    <!-- me -->
-    <div class="me-container">
-      <h1 id="me">我.</h1>
-    </div>
-
-  </div>
-  <div id="player"></div>
-<script type="text/javascript" src="/main.js"></script></body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="shortcut icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"/><meta name="theme-color" content="#000000"/><link rel="manifest" href="/manifest.json"/><title>React App</title><link href="/static/css/1.9a0b7eed.chunk.css" rel="stylesheet"><link href="/static/css/main.22e5fbae.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(l){function e(e){for(var r,t,n=e[0],o=e[1],u=e[2],f=0,i=[];f<n.length;f++)t=n[f],p[t]&&i.push(p[t][0]),p[t]=0;for(r in o)Object.prototype.hasOwnProperty.call(o,r)&&(l[r]=o[r]);for(s&&s(e);i.length;)i.shift()();return c.push.apply(c,u||[]),a()}function a(){for(var e,r=0;r<c.length;r++){for(var t=c[r],n=!0,o=1;o<t.length;o++){var u=t[o];0!==p[u]&&(n=!1)}n&&(c.splice(r--,1),e=f(f.s=t[0]))}return e}var t={},p={2:0},c=[];function f(e){if(t[e])return t[e].exports;var r=t[e]={i:e,l:!1,exports:{}};return l[e].call(r.exports,r,r.exports,f),r.l=!0,r.exports}f.m=l,f.c=t,f.d=function(e,r,t){f.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},f.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},f.t=function(r,e){if(1&e&&(r=f(r)),8&e)return r;if(4&e&&"object"==typeof r&&r&&r.__esModule)return r;var t=Object.create(null);if(f.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:r}),2&e&&"string"!=typeof r)for(var n in r)f.d(t,n,function(e){return r[e]}.bind(null,n));return t},f.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return f.d(r,"a",r),r},f.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},f.p="/";var r=window.webpackJsonp=window.webpackJsonp||[],n=r.push.bind(r);r.push=e,r=r.slice();for(var o=0;o<r.length;o++)e(r[o]);var s=n;a()}([])</script><script src="/static/js/1.f531206c.chunk.js"></script><script src="/static/js/main.e859985d.chunk.js"></script></body></html>
